third_party/move/move-compiler-v2/tests/lambda/inline-parity/break_continue_in_lambda.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:40:22
   │
40 │                 brk2(| | break);
   │                      ^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:41:8
   │
41 │         brk2(| | while (true) { break });
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:42:8
   │
42 │         brk2(| | while (true) { continue });
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
